NEON-1348 Changed the terminology used for the counter variable in the CountBy visualization.

--- a/app/partials/directives/countby.html
+++ b/app/partials/directives/countby.html
@@ -15,7 +15,7 @@
     </div>
 
     <div class="count-by-field-label col-xs-4">
-        <h4 class="count-by-field-count pull-right"><span class="count text-primary ng-binding" ng-bind="count"></span> fields</h4>
+        <h4 class="count-by-field-count pull-right"><span class="count text-primary ng-binding" ng-bind="count"></span> values</h4>
     </div>
 </div>
 
