--- a/app/css/errorStyle.css
+++ b/app/css/errorStyle.css
@@ -2,8 +2,7 @@
     margin: 20px;
 }
 
-.notifyjs-error-base .notifyjs-bootstrap-base,
-.notifyjs-stacktrace-base .notifyjs-bootstrap-base {
+.notifyjs-bootstrap-base {
     /* Set the top padding so that the text is aligned with the background icon. */
     padding: 6px 10px 6px 25px;
 }
@@ -14,12 +13,12 @@
 }
 
 .notifyjs-error-base .buttons {
-    padding-top: 5px;
+    padding: 10px 0px;
 }
 
-.notifyjs-stacktrace-base .stacktrace {
+.notifyjs-error-base .stacktrace {
     font-size: 10px;
-    max-height: 120px;
+    height: 120px;
     overflow: auto;
     padding: 2px 4px;
 }
