NEON-1354 Moving CSS for alert-danger specific to the heatmap from the general CSS file to the heatmap's CSS file.

--- a/app/css/directives/heatMap.css
+++ b/app/css/directives/heatMap.css
@@ -105,3 +105,13 @@
 .visualization-widget-mobile .heat-map .olMap {
     height: 400px !important;
 }
+
+/* ================
+    ALERTS
+================ */
+
+.heat-map .alert-danger {
+    background: none;
+    border-color: #C2360D;
+    color: #C2360D;
+}
