--- a/app/partials/directives/directedGraph.html
+++ b/app/partials/directives/directedGraph.html
@@ -1,13 +1,13 @@
 <div class="directed-graph well">
     <div class="row config-row-div">
-        <div class="col-xs-8">
-            <array-text-form fields="groupFields"></array-text-form>
+        <div class="col-xs-12">
+            <array-text-form fields="groupFields" label="fieldsLabel" allow-more="allowMoreFields" submit-handler="render"></array-text-form>
         </div>
-        <div id="node-click-name" class="col-xs-2">
+        <div id="node-click-name" class="col-xs-12">
         </div>
-        <div class="col-xs-2">
+        <!--div class="col-xs-2">
             <button ng-click="render()" class="btn btn-default draw-button pull-right">Draw</button>
-        </div>
+        </div-->
     </div>
     <div class="row">
         <div class="col-xs-12">
