--- a/app/css/style.css
+++ b/app/css/style.css
@@ -758,6 +758,9 @@ label{
     vertical-align: middle;
     width: 350px;
 }
+.form-inline .form-input-group .form-control {
+    width: 150px;
+}
 
 /* ================
     OVERLAY
