--- a/app/css/directives/directedGraph.css
+++ b/app/css/directives/directedGraph.css
@@ -9,9 +9,22 @@
 }
 
 div.draw-button-div {
-	padding-left: 0px;
+    padding-left: 0px;
 }
 
 div.config-row-div {
-	padding-bottom: 5px;
+    padding-bottom: 5px;
+}
+
+div.graph-tooltip {
+    position: absolute;
+    text-align: center;
+    /*width: 50px;*/
+    height: 20px;
+    padding: 5px;
+    font: 12px sans-serif;
+    background: lightsteelblue;
+    border: 0px;
+    border-radius: 8px;
+    pointer-events: none;
 }
