--- a/app/partials/directives/directedGraph.html
+++ b/app/partials/directives/directedGraph.html
@@ -15,23 +15,38 @@
     </div>
 </div>
 
-<div class="directed-graph well">
-    <div class="row config-row-div">
+<div class="directed-graph {{uniqueId}}">
+    <div class="config-row-div">
+        <div class="chart-options pull-right">
+            <a class="btn btn-lg text-muted collapsed" data-toggle="collapse" data-target=".{{uniqueId}} .graph-options" data-animation=false
+              ng-click="toggleOptionsDisplay()">
+              <span class="glyphicon glyphicon-cog"></span>
+              <span class="caret"></span>
+            </a>
+            <div class="popover bottom graph-options">
+                <div class="arrow"></div>
+                <div class="popover-content">
+                    <div class="form-group">
+                        <select ng-options="user for user in users track by user" ng-model="selectedUser">
+                            <option value="">Select User</option>
+                        </select>
+                        <div class="clearfix"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="filter-reset pull-right" ng-repeat="field in groupFields">
             {{field}}
             <a class="btn" ng-click="removeField(field)">
              <span class="glyphicon glyphicon-remove"></span>
             </a>
         </div>
-        <div id="node-click-name" class="col-xs-12">
+        <div id="node-click-name">
+            Shift-click to view node
         </div>
         <!--div class="col-xs-2">
             <button ng-click="render()" class="btn btn-default draw-button pull-right">Draw</button>
         </div-->
     </div>
-    <div class="row">
-        <div class="col-xs-12">
-            <div id="directed-graph-div-{{uniqueId}}"></div>
-        </div>
-    </div>
+    <div id="directed-graph-div-{{uniqueId}}"></div>
 </div>
