The D3 Graph visualization now loads the active dataset after initialization.  Currently the database and table names need to be set in appConfig for use in the Graph.  Clicking on a screen name in the Graph will set a filter for the other visualizations using the messenger.  Created a temporary Graph icon.

--- a/app/partials/directives/directedGraph.html
+++ b/app/partials/directives/directedGraph.html
@@ -20,7 +20,7 @@
         </div>
         <div class="filter-reset pull-right" ng-repeat="field in groupFields">
             {{field}}
-            <a class="btn" ng-click="removeField(field)">
+            <a class="btn" ng-click="removeFilter(field)">
              <span class="glyphicon glyphicon-remove"></span>
             </a>
         </div>
