--- a/app/partials/directives/tangeloMentions.html
+++ b/app/partials/directives/tangeloMentions.html
@@ -120,7 +120,7 @@
 
 
   <!-- Create a drawer with the control panel in it -->
-  <div id=control-panel style="opacity: 0.8; height: 50%">
+  <div id=control-panel class="control-panel">
       <div class=container>
           <div class=row>
               <div class=col-md-2>
