Adding some style changes to Mentions and moving some of the neon filter config into the mentions defaults.json file.

--- a/app/partials/directives/tangeloMentions.html
+++ b/app/partials/directives/tangeloMentions.html
@@ -72,7 +72,7 @@
 
   <div class="navbar navbar-default navbar-fixed" >
       <div class=navbar-header>
-          <a class=navbar-brand href=/examples>Tangelo</a>
+          <a class=navbar-brand href="http://www.tangelohub.org/tangelo/">Tangelo</a>
       </div>
 
       <ul class="nav navbar-nav">
