--- a/app/css/directives/tangeloMentions.css
+++ b/app/css/directives/tangeloMentions.css
@@ -5,7 +5,7 @@
     margin: 0px;
     padding: 0px;
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: hidden;
     height: 100%;
     width: 100%;
 }
