--- a/app/partials/directives/heatMap.html
+++ b/app/partials/directives/heatMap.html
@@ -35,7 +35,7 @@
                     <div class="form-group">
                         <label>Map Layer</label>
                         <div class="btn-group">
-                          <label class="btn btn-default active" ng-class="{true: '', false: 'active'}[showPoints]"
+                          <label class="btn btn-default" ng-class="{true: '', false: 'active'}[showPoints]"
                               data-toggle="tooltip" data-placement="top" title="Clusters" data-container="body" data-trigger="hover focus">
                             <input type="radio" ng-model="showPoints" style="display:none" ng-value="false"> 
                             <span class="glyphicon glyphicon-cloud"></span>
