NEON-1388 Added a chart options button to all visualizations that did not previously have one.  Added a table selection dropdown in the chart options for all visualizations.  Added a table selection dropdown to the main container for the filter builder and view data table available through the navbar.  Minor formatting and styling changes.

--- a/app/css/directives/countBy.css
+++ b/app/css/directives/countBy.css
@@ -124,3 +124,8 @@ span.glyphicon:hover {
     color: #39b54a;
 }
 
+.countByDirective .chart-options {
+    /* Add a bottom margin to make the chart-options element the same size as filter-reset elements. */
+    margin-bottom: 6px;
+    margin-left: 10px;
+}
