--- a/app/partials/directives/barchart.html
+++ b/app/partials/directives/barchart.html
@@ -10,6 +10,11 @@
         <div class="arrow"></div>
         <div class="popover-content">
             <div class="form-group">
+                <label>Table</label>
+                <select class="form-control" ng-model="selectedTable" ng-options="table.name for table in tables" ng-required="true" ng-disabled="(tables.length == 0)">
+                </select>
+            </div>
+            <div class="form-group">
                 <fieldselector target-var="attrX" label-text="'X axis:'" default-mapping="'bar_x_axis'"></fieldselector>
             </div>
             <div class="form-group">
