--- a/app/partials/directives/linechart.html
+++ b/app/partials/directives/linechart.html
@@ -7,6 +7,11 @@
         <div class="arrow"></div>
         <div class="popover-content">
             <div class="form-group">
+                <label>Table</label>
+                <select class="form-control" ng-model="selectedTable" ng-options="table.name for table in tables" ng-required="true" ng-disabled="(tables.length == 0)">
+                </select>
+            </div>
+            <div class="form-group">
                 <fieldselector target-var="attrY" label-text="'Y-axis'" default-mapping="'y_axis'"></fieldselector>
             </div>
             <div class="form-group">
