--- a/app/partials/directives/timelineSelector.html
+++ b/app/partials/directives/timelineSelector.html
@@ -1,7 +1,23 @@
+<div class="chart-options pull-right">
+    <a class="btn btn-lg text-muted collapsed" data-toggle="collapse" data-target=".{{uniqueChartOptions}} .timeline-options" data-animation=false>
+      <span class="glyphicon glyphicon-cog"></span>
+      <span class="caret"></span>
+    </a>
+    <div class="timeline-options popover bottom">
+        <div class="arrow"></div>
+        <div class="popover-content">
+            <div class="form-group">
+                <label>Table</label>
+                <select class="form-control" ng-model="selectedTable" ng-options="table.name for table in tables" ng-required="true" ng-disabled="(tables.length == 0)">
+                </select>
+            </div>
+        </div>
+    </div>
+</div>
 
   <form>
 
-    <div class="form-group pull-right" ng-hide="!(data.length > 1)">
+    <div class="form-group pull-right timeseries-selector-form-group" ng-hide="!(data.length > 1)">
       <div class="input-group timeseries-selector">
         <select class="form-control" ng-model="primarySeries"
           ng-options="series.name for series in data">
