NEON-1388 NEON-1390 Most accessor functions in the DatasetService now require a table name argument instead of returning the data from the first table in the dataset.  Fixed some minor issues in databaseConfig in which field names for non-default tables were not correctly retrieved.  Removed fieldSelector.js and its use in the BarChart and LineChart due to the changes in the DatasetService which caused timing issues while updating variables between the parent and child directives.

--- a/app/partials/directives/linechart.html
+++ b/app/partials/directives/linechart.html
@@ -12,7 +12,9 @@
                 </select>
             </div>
             <div class="form-group">
-                <fieldselector target-var="attrY" label-text="'Y-axis'" default-mapping="'y_axis'"></fieldselector>
+                <label>Y axis</label>
+                <select class="form-control" ng-model="attrY" ng-options="field for field in fields" ng-required="true" ng-disabled="!(fields.length > 0)">
+                </select>
             </div>
             <div class="form-group">
                 <select class="form-control" ng-model="aggregation" ng-disabled="!(fields.length > 0)">
@@ -22,7 +24,10 @@
                 </select>
             </div>
             <div class="form-group">
-                <fieldselector target-var="categoryField" label-text="'Categorize by'" default-mapping="'line_category'" default-option="'None'"></fieldselector>
+                <label>Categorize by</label>
+                <select class="form-control" ng-model="categoryField" ng-options="field for field in fields" ng-required="true" ng-disabled="!(fields.length > 0)">
+                    <option value="">None</option>
+                </select>
             </div>
         </div>
     </div>
