--- a/app/partials/directives/barchart.html
+++ b/app/partials/directives/barchart.html
@@ -15,10 +15,14 @@
                 </select>
             </div>
             <div class="form-group">
-                <fieldselector target-var="attrX" label-text="'X axis:'" default-mapping="'bar_x_axis'"></fieldselector>
+                <label>X axis</label>
+                <select class="form-control" ng-model="attrX" ng-options="field for field in fields" ng-required="true" ng-disabled="!(fields.length > 0)">
+                </select>
             </div>
             <div class="form-group">
-                <fieldselector target-var="attrY" label-text="'Y axis:'" default-mapping="'y_axis'"></fieldselector>
+                <label>Y axis</label>
+                <select class="form-control" ng-model="attrY" ng-options="field for field in fields" ng-required="true" ng-disabled="!(fields.length > 0)">
+                </select>
             </div>
             <div class="form-group">
                 <select ng-model="barType" class="form-control">
