NEON-1393 Selecting a table from the dropdown in the chart options for each visualization will now immediately set the fields and query for the data in that table.  This will also clear all active filters in that visualization for the old table.  Fixed some minor issues remaining from previous commits related to this story.

--- a/app/css/directives/queryResultsTable.css
+++ b/app/css/directives/queryResultsTable.css
@@ -93,6 +93,11 @@
     margin-left: 10px;
 }
 
+.query-results-directive .query-results-options {
+    /* Set a lower position for the popover due to the extra top margin added to chart-options. */
+    top: 48px;
+}
+
 @media (max-width: 767px) {
     .data-tray h4.pull-left,
     .data-tray .form-inline,
