--- a/app/partials/directives/countby.html
+++ b/app/partials/directives/countby.html
@@ -8,7 +8,7 @@
         <div class="popover-content">
             <div class="form-group">
                 <label>Table</label>
-                <select class="form-control" ng-model="selectedTable" ng-options="table.name for table in tables" ng-required="true" ng-disabled="(tables.length == 0)">
+                <select class="form-control" ng-model="selectedTable" ng-options="table.name for table in tables" ng-required="true" ng-disabled="(tables.length == 0)" ng-change="updateFieldsAndQueryForData()">
                 </select>
             </div>
         </div>
