--- a/app/partials/directives/directedGraph.html
+++ b/app/partials/directives/directedGraph.html
@@ -11,30 +11,18 @@
                 <select class="form-control" ng-model="selectedTable" ng-options="table.name for table in tables" ng-required="true" ng-disabled="(tables.length == 0)" ng-change="render()">
                 </select>
             </div>
+            <div class="form-group">
+                <label>User</label>
+                <select class="form-control" ng-model="selectedUser" ng-options="user for user in users track by user" ng-required="false" ng-disabled="(users.length == 0)">
+                    <option value=""></option>
+                </select>
+            </div>
         </div>
     </div>
 </div>
 
 <div class="directed-graph {{uniqueId}}">
     <div class="config-row-div">
-        <div class="chart-options pull-right">
-            <a class="btn btn-lg text-muted collapsed" data-toggle="collapse" data-target=".{{uniqueId}} .graph-options" data-animation=false
-              ng-click="toggleOptionsDisplay()">
-              <span class="glyphicon glyphicon-cog"></span>
-              <span class="caret"></span>
-            </a>
-            <div class="popover bottom graph-options">
-                <div class="arrow"></div>
-                <div class="popover-content">
-                    <div class="form-group">
-                        <select ng-options="user for user in users track by user" ng-model="selectedUser">
-                            <option value="">Select User</option>
-                        </select>
-                        <div class="clearfix"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
         <div class="filter-reset pull-right" ng-repeat="field in groupFields">
             {{field}}
             <a class="btn" ng-click="removeFilter(field)">
