--- a/app/partials/directives/directedGraph.html
+++ b/app/partials/directives/directedGraph.html
@@ -8,12 +8,12 @@
         <div class="popover-content">
             <div class="form-group">
                 <label>Table</label>
-                <select class="form-control" ng-model="selectedTable" ng-options="table.name for table in tables" ng-required="true" ng-disabled="(tables.length == 0)" ng-change="render()">
+                <select class="form-control" ng-model="selectedTable" ng-options="table.name for table in tables" ng-required="true" ng-disabled="(tables.length == 0)" ng-change="queryForData()">
                 </select>
             </div>
             <div class="form-group">
-                <label>User</label>
-                <select class="form-control" ng-model="selectedUser" ng-options="user for user in users track by user" ng-required="false" ng-disabled="(users.length == 0)">
+                <label>Item</label>
+                <select class="form-control" ng-model="selectedNode" ng-options="node for node in nodes track by node" ng-required="false" ng-disabled="(nodes.length == 0)">
                     <option value=""></option>
                 </select>
             </div>
@@ -29,12 +29,9 @@
              <span class="glyphicon glyphicon-remove"></span>
             </a>
         </div>
-        <div id="node-click-name">
-            Shift-click to view node
-        </div>
-        <!--div class="col-xs-2">
-            <button ng-click="render()" class="btn btn-default draw-button pull-right">Draw</button>
-        </div-->
+    </div>
+    <div ng-hide="(numberOfNodes > 0)">
+        No data available
     </div>
     <div id="directed-graph-div-{{uniqueId}}"></div>
 </div>
