--- a/app/partials/directives/directedGraph.html
+++ b/app/partials/directives/directedGraph.html
@@ -8,7 +8,12 @@
         <div class="popover-content">
             <div class="form-group">
                 <label>Table</label>
-                <select class="form-control" ng-model="selectedTable" ng-options="table.name for table in tables" ng-required="true" ng-disabled="(tables.length == 0)" ng-change="queryForData()">
+                <select class="form-control" ng-model="selectedTable" ng-options="table.name for table in tables" ng-required="true" ng-disabled="(tables.length == 0)" ng-change="updateFieldsAndQueryForData()">
+                </select>
+            </div>
+            <div class="form-group">
+                <label>Field</label>
+                <select class="form-control" ng-model="selectedField" ng-options="field for field in fields" ng-required="true" ng-disabled="(fields.length == 0)" ng-change="clearFilters()">
                 </select>
             </div>
             <div class="form-group">
@@ -16,6 +21,10 @@
                 <select class="form-control" ng-model="selectedNode" ng-options="node for node in nodes track by node" ng-required="false" ng-disabled="(nodes.length == 0)">
                     <option value=""></option>
                 </select>
+            </div>
+            <div class="form-group">
+                <label>Item Limit</label>
+                <input type="number" min="50" class="form-control" ng-model="nodeLimit" ng-change="queryForData()"></input>
             </div>
         </div>
     </div>
