Fixed a bug in the graph visualization in which duplicate nodes were being included instead of being ignored.

--- a/app/partials/directives/directedGraph.html
+++ b/app/partials/directives/directedGraph.html
@@ -39,7 +39,7 @@
             </a>
         </div>
     </div>
-    <div ng-hide="(numberOfNodes > 0)">
+    <div ng-hide="(numberOfNodesInGraph > 0)">
         No data available
     </div>
     <div id="directed-graph-div-{{uniqueId}}"></div>
