NEON-1416 The Graph now automatically queries for a network graph if a filter is set on the same or a related field in another visualization.  Changed message content for filter changed events in all visualizations due to design changes from NEON-1385.

--- a/app/partials/directives/directedGraph.html
+++ b/app/partials/directives/directedGraph.html
@@ -32,9 +32,9 @@
 
 <div class="directed-graph {{uniqueId}}">
     <div class="config-row-div">
-        <div class="filter-reset pull-right" ng-repeat="field in groupFields">
-            {{field}}
-            <a class="btn" ng-click="removeFilter(field)">
+        <div class="filter-reset pull-right" ng-repeat="value in graphFilterValues">
+            {{value}}
+            <a class="btn" ng-click="removeFilter(value)">
              <span class="glyphicon glyphicon-remove"></span>
             </a>
         </div>
