--- a/app/partials/directives/heatMap.html
+++ b/app/partials/directives/heatMap.html
@@ -13,7 +13,7 @@
                 <form name="mapOptionsform">
                     <div class="form-group">
                         <label>Table</label>
-                        <select class="form-control" ng-model="selectedTable" ng-options="table.name for table in tables" ng-required="true" ng-disabled="(tables.length == 0)" ng-change="updateFieldsAndQueryForMapData()">
+                        <select class="form-control" ng-model="selectedTable" ng-options="table.name for table in tables" ng-required="true" ng-disabled="(tables.length < 2)" ng-change="updateFieldsAndQueryForMapData()">
                         </select>
                     </div>
                     <div class="form-group">
