--- a/app/partials/directives/filterState.html
+++ b/app/partials/directives/filterState.html
@@ -1,11 +1,19 @@
 <div class="filter-state-view">
     <div ng-if="filterStates.raw.length === 0" class="filter-state-warning">No filters currently set</div>
     <div ng-repeat="(db, value) in filterStates.formatted">
-        <div ng-repeat="(table, states) in filterStates.formatted[db]">
-            <span class="filter-state-header">{{db}} - {{table}}</span>
-            <ul>
-                <li ng-repeat="state in states" class="filter-state">{{state}}</li>
-            </ul>
-        </div>
+        <table class="table table-striped" ng-repeat="(table, states) in value">
+            <thead>
+                <tr>
+                    <th>{{db}}</th>
+                    <th>{{table}}</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="state in states">
+                    <td></td>
+                    <td>{{state}}</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </div>
