NEON-1416 Fixed a bug in the Graph related to creating network graphs whenever filters are set in other visualizations so that it no longer ignores filters that aren't set for the Graph's currently selected field.  Also fixed a minor bug for sorting non-strings in the Graph that caused an error.

--- a/app/partials/directives/directedGraph.html
+++ b/app/partials/directives/directedGraph.html
@@ -32,7 +32,7 @@
 
 <div class="directed-graph {{uniqueId}}">
     <div class="config-row-div">
-        <div class="filter-reset pull-right" ng-repeat="value in graphFilterValues">
+        <div class="filter-reset pull-right" ng-repeat="value in graphFilteredData">
             {{value}}
             <a class="btn" ng-click="removeFilter(value)">
              <span class="glyphicon glyphicon-remove"></span>
