--- a/app/partials/directives/barchart.html
+++ b/app/partials/directives/barchart.html
@@ -22,13 +22,14 @@
             <div class="form-group">
                 <label>Y axis</label>
                 <select class="form-control" ng-model="attrY" ng-options="field for field in fields" ng-required="true" ng-disabled="!(fields.length > 0)">
+                    <option value="">*</option>
                 </select>
             </div>
             <div class="form-group">
                 <select ng-model="barType" class="form-control">
                     <option value="count">Count</option>
                     <option value="sum">Sum</option>
-                    <option value="avg">Avg</option>
+                    <option value="average">Average</option>
                 </select>
             </div>
         </div>
@@ -44,7 +45,7 @@
 <div class="legend">
     <div class="legend-item">
         <span class="legend-icon" style="background-color: #39b54a"></span>
-        <span class="legend-text" ng-show="barType === 'avg'">Average {{attrY}}</span>
+        <span class="legend-text" ng-show="barType === 'average'">Average {{attrY}}</span>
         <span class="legend-text" ng-show="barType === 'sum'">Sum {{attrY}}</span>
         <span class="legend-text" ng-show="barType === 'count'">Count</span>
         <span class="legend-text" >vs {{attrX}}</span>
