--- a/app/partials/directives/linechart.html
+++ b/app/partials/directives/linechart.html
@@ -14,13 +14,14 @@
             <div class="form-group">
                 <label>Y axis</label>
                 <select class="form-control" ng-model="attrY" ng-options="field for field in fields" ng-required="true" ng-disabled="!(fields.length > 0)">
+                    <option value="" ng-show="(aggregation == 'count')">*</option>
                 </select>
             </div>
             <div class="form-group">
                 <select class="form-control" ng-model="aggregation" ng-disabled="!(fields.length > 0)">
                     <option value="count">Count</option>
                     <option value="sum">Sum</option>
-                    <option value="avg">Average</option>
+                    <option value="average">Average</option>
                 </select>
             </div>
             <div class="form-group">
@@ -42,7 +43,7 @@
     <div class="legend-item legend-item-clickable" title="{{colorMapping.series}}" ng-repeat="colorMapping in colorMappings" ng-click="toggleSeries(colorMapping.series)" ng-class="{true: 'legend-hidden', false: ''}[colorMapping.hidden]">
         <span class="legend-icon" style="background-color: {{colorMapping.color}}"></span>
         <span class="legend-text">{{colorMapping.series}}</span>
-        <span ng-show="aggregation != 'avg'" class="legend-count text-muted">({{colorMapping.total | numberShort}})</span>
+        <span ng-show="aggregation != 'average'" class="legend-count text-muted">({{colorMapping.total | numberShort}})</span>
     </div>
 
 </div>
