NEON-1419 Added latitude and longitude field selection dropdowns in the options for the HeatMap.  The HeatMap now automatically resizes and displays a scrollbar in its options element as necessary.

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -352,6 +352,7 @@ fieldset[disabled] .btn-primary.active {
 }
 .chart-options .popover-content {
     background-color: #FFFFFF;
+    overflow: auto;
     padding: 15px 15px 0;
     border: 1px solid rgba(0, 0, 0, 0.2);
     border-radius: 6px;
