--- a/app/partials/directives/heatMap.html
+++ b/app/partials/directives/heatMap.html
@@ -17,6 +17,16 @@
                         </select>
                     </div>
                     <div class="form-group">
+                        <label>Latitude</label>
+                        <select class="form-control" ng-model="latitudeField" ng-options="field for field in fields" ng-required="true" ng-disabled="!(fields.length > 0)">
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label>Longitude</label>
+                        <select class="form-control" ng-model="longitudeField" ng-options="field for field in fields" ng-required="true" ng-disabled="!(fields.length > 0)">
+                        </select>
+                    </div>
+                    <div class="form-group">
                         <label>Point Limit</label>
                         <input type="number" min="1" name="mapOptionsform" class="form-control" ng-model="limit"
                             ng-class="{true: '', false: 'has-error'}[limitInput.$error.number]">
@@ -51,18 +61,6 @@
                             <select class="form-control" ng-model="colorByField" ng-disabled="!(fields.length > 0)" 
                                 ng-options="field for field in fields">
                                 <option value="">No selection</option>
-                            </select>
-                        </div>
-                        <div class="form-group sr-only">
-                            <label>Lat</label>
-                            <select class="form-control" ng-model="latitudeField" ng-disabled="!(fields.length > 0)" 
-                                ng-options="field for field in fields">
-                            </select>
-                        </div>
-                        <div class="form-group sr-only">
-                            <label>Lon</label>
-                            <select class="form-control" ng-model="longitudeField" ng-disabled="!(fields.length > 0)" 
-                                ng-options="field for field in fields">
                             </select>
                         </div>
                     </div>
