NEON-1344 Users may now remove columns from the View Data Table through X buttons in the column headers.  Users can add columns that have been deleted through a new Add Column selection dropdown.  Moved all Data Table options for the non-navbar visualization to its options menu.

--- a/app/css/directives/countBy.css
+++ b/app/css/directives/countBy.css
@@ -80,6 +80,7 @@
 .count-by-grid .slick-header .slick-header-column{
     color: #eeeeee;
     background: #39b54a;
+    cursor: pointer;
 }
 .count-by-grid .slick-header .slick-header-column.ui-state-hover{
     color: #39b54a;
