NEON-1434 Added a text notification in the HeatMap and Graph when the data has reached or exceeded the limit.

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -371,6 +371,13 @@ fieldset[disabled] .btn-primary.active {
     display: block;
 }
 
+.chart-options span.chart-options-text {
+    /* Set the top position so the text aligns vertically with the gear icon. */
+    position: relative;
+    top: -1px;
+    margin-right: 5px;
+}
+
 /* Chart legend */
 
 .legend{
