Fixing Tangelo Mentions to work with recent configuration and API changes.  Incorporated filtering on related tables through the FilterService for Tangelo Mentions and added a response to filter-changed events.  Making other minor changes and fixes in preparation for the demo.

--- a/app/css/directives/tangeloMentions.css
+++ b/app/css/directives/tangeloMentions.css
@@ -74,3 +74,10 @@
 #tangelo-mentions-tray {
     height: 100%;
 }
+
+/* Overwrite neon navbar styling. */
+.tangelo-mentions .navbar-default .navbar-nav > li > a {
+    border-bottom: none;
+    margin: 0px;
+    padding: 15px;
+}
