--- a/app/partials/directives/countby.html
+++ b/app/partials/directives/countby.html
@@ -32,7 +32,7 @@
     </div>
 
     <div class="count-by-field-label pull-right">
-        <h4 class="count-by-field-count pull-right"><span class="count text-primary ng-binding" ng-bind="count"></span> values</h4>
+        <h4 class="count-by-field-count pull-right"><span class="count text-primary ng-binding" ng-bind="count"></span></h4>
     </div>
 
     <div class="clearfix"></div>
