The D3 Graph now sets its own filter whenever another visualization sets a filter on its selected node field (for its selected table).  This will automatically trigger a query for the network graph for the filtered node.  This means that the filter will have to be removed from both visualizations in order to return the Graph to its default state.

--- a/app/partials/directives/directedGraph.html
+++ b/app/partials/directives/directedGraph.html
@@ -40,7 +40,7 @@
 
 <div class="directed-graph {{uniqueId}}">
     <div class="config-row-div">
-        <div class="filter-reset pull-right" ng-repeat="value in graphFilteredData">
+        <div class="filter-reset pull-right" ng-repeat="value in filteredNodes">
             {{value}}
             <a class="btn" ng-click="removeFilter(value)">
              <span class="glyphicon glyphicon-remove"></span>
