--- a/app/partials/directives/filterBuilder.html
+++ b/app/partials/directives/filterBuilder.html
@@ -23,35 +23,33 @@
     </div>
 
     <div class="form-inline pull-right">
-        <div class="form-group">
-            <label>Table</label>
-            <select class="form-control" ng-model="selectedTable" ng-options="table.name for table in tables" ng-required="true" ng-disabled="(tables.length < 2)" ng-change="resetFiltersAndUpdateFields()">
-            </select>
-        </div>
     </div>
 
     <div class="clearfix"></div>
 
-    <div class="filter form-inline clearfix" ng-repeat="filterRow in filterTable.filterState.data">
+    <div class="filter form-inline clearfix" ng-repeat="filterRow in filterTable.getFilterRows()">
       <div class="form-group">
-        <select class="form-control" ng-model="filterRow.columnValue" ng-disabled="!(fields.length > 0)" ng-options="field for field in fields">
+        <select class="form-control" ng-model="filterRow.tableName" ng-options="tableName for tableName in tableNames" ng-disabled="(tableNames.length < 2)" ng-change="updateFieldsForFilterRow(filterRow)">
         </select>
       </div>
       <div class="form-group">
-        <select class="form-control"  ng-model="filterRow.operatorValue" ng-disabled="!(fields.length > 0)"
-          ng-options="operator for operator in filterTable.operatorOptions">
+        <select class="form-control" ng-model="filterRow.columnValue" ng-disabled="!(filterRow.columnOptions.length > 0)" ng-options="column for column in filterRow.columnOptions">
+        </select>
+      </div>
+      <div class="form-group">
+        <select class="form-control"  ng-model="filterRow.operatorValue" ng-disabled="!(filterRow.columnOptions.length > 0)" ng-options="operator for operator in filterTable.operatorOptions">
         </select>
       </div>
       <div class="form-group">
         <input type="text" class="form-control" size="42" placeholder="Value" ng-model="filterRow.value">
       </div>
       <div class="form-group">
-        <button type="button" class="btn btn-default refresh" ng-click="updateFilterRow($index)">
+        <button type="button" class="btn btn-default refresh" ng-click="updateFilterRow(filterRow.tableName, $index)">
           <span class="glyphicon glyphicon-refresh"></span>
         </button>
       </div>
       <div class="form-group pull-right">
-        <button type="button" class="btn delete" ng-click="removeFilterRow($index)">
+        <button type="button" class="btn delete" ng-click="removeFilterRow(filterRow.tableName, $index)">
           <span class="glyphicon glyphicon-remove"></span>
         </button>
       </div>
@@ -59,12 +57,15 @@
 
     <div class="filter filter-new form-inline">
       <div class="form-group">
+        <select id="filter-table-selection" class="form-control" ng-model="selectedTableName" ng-options="tableName for tableName in tableNames" ng-disabled="(tableNames.length < 2)" ng-change="updateFields()">
+        </select>
+      </div>
+      <div class="form-group">
         <select id="filter-field-selection" class="form-control" ng-model="selectedField" ng-disabled="!(fields.length > 0)" ng-options="field for field in fields">
         </select>
       </div>
       <div class="form-group">
-        <select id="filter-operator-selection" class="form-control"  ng-model="selectedOperator" ng-disabled="!(fields.length > 0)"
-          ng-options="operator for operator in filterTable.operatorOptions">
+        <select id="filter-operator-selection" class="form-control"  ng-model="selectedOperator" ng-disabled="!(fields.length > 0)" ng-options="operator for operator in filterTable.operatorOptions">
         </select>
       </div>
       <div class="form-group">
